--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-toolbar></app-toolbar>
-<router-outlet></router-outlet>
+<section>
+    <mat-card>
+        <mat-card-content>
+            <app-toolbar (onNewContactEvent)="onClickNewContact()"/>
+            <router-outlet />
+        </mat-card-content>
+    </mat-card>
+</section>
