--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,9 +1,9 @@
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
+    <table mat-table matSort [dataSource]="dataSource">
   
       @for (column of displayedColumns(); track $index) {
         <ng-container [matColumnDef]=column>
-          <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
           <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
         </ng-container>
       }
