--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,7 +1,7 @@
 <section>
   <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input type="text" (keyup)="applyFilter($event)" placeholder="Filtración...">
+    <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Filtración...">
   </mat-form-field>
 
 
