armando el componente filter

--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,10 +1,7 @@
 <section>
-  <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Filtración...">
-  </mat-form-field>
+  
 
-
+  <app-filter [label]="'Filter...'" [placeholder]="'Search...'" [(filter)]="valueToFilter"/>
   <div class="mat-elevation-z8">
     <table mat-table matSort [dataSource]="dataSource">
   
