armando el componente filter

--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,5 +1,7 @@
 <section>
-  
+  <pre>
+    {{valueToFilter()}}
+  </pre>
 
   <app-filter [label]="'Filter...'" [placeholder]="'Search...'" [(filter)]="valueToFilter"/>
   <div class="mat-elevation-z8">
