--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spacer {
     flex: 1 1 auto
 }
+
+.mat-mdc-form-field {
+    font-size: 1rem;
+    width: 100%;
+}
+
+.mt-1 {
+    margin-top: 1rem;
+}
