--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -3,15 +3,35 @@
         Contact form
     </h1>
 </div>
-<form>
+<form [formGroup]="contactForm">
     <div mat-dialog-content class="content">
         <div class="row">
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>
                     Name
                 </mat-label>
-                <input matInput type="text">
+                <input matInput type="text" formControlName="name">
             </mat-form-field>
+        </div>
+        <div class="row">
+            <mat-form-field class="full-width" appearance="outline">
+                <mat-label>
+                    Email
+                </mat-label>
+                <input matInput type="text" formControlName="email">
+            </mat-form-field>
+        </div>
+        <div class="row">
+            <mat-form-field class="full-width" appearance="outline">
+                <mat-label>
+                    Phone
+                </mat-label>
+                <input matInput type="text" formControlName="phone">
+            </mat-form-field>
+        </div>
+        <div mat-dialog-actions class="action">
+            <button mat-raised-button [mat-dialog-close]="false" type="button">Cancel</button>
+            <button [disabled]="!contactForm.valid" mat-raised-button color="primary" type="button">{{getTitle()}}</button>
         </div>
     </div>
 
