--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -15,10 +15,10 @@
         <td mat-cell *matCellDef="let element">
           {{element[column]}}
           @if(column === 'action'){
-            <button mat-icon-button color="primary">
+            <button mat-icon-button color="primary" (click)="openEditForm(element)">
               <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="warn">
+            <button mat-icon-button color="warn" (click)="deleteContact(element.id)">
               <mat-icon>delete</mat-icon>
             </button>
           }
