final. agregado de un spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
 <section>
     <mat-card>
         <mat-card-content>
-            <app-toolbar (onNewContactEvent)="onClickNewContact()"/>
+            @defer(){
+            <app-toolbar (onNewContactEvent)="onClickNewContact()" />
             <router-outlet />
+            }
+            @loading( minimum 1s) {
+            <div class="spinner-container">
+                <mat-spinner mode="indeterminate"></mat-spinner>
+            </div>
+            }
         </mat-card-content>
     </mat-card>
 </section>
